--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "2.1.5",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
+    "redux-react-hook": "^3.1.0",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
